--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "karma-jasmine-html-reporter": "^0.2.2",
         "karma-phantomjs-launcher": "^1.0.4",
         "phantomjs-prebuilt": "^2.1.16",
+        "prettier": "^1.17.1",
         "protractor": "^5.3.2",
         "ts-node": "~4.1.0",
         "tslint": "~5.9.1"
