--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
         "@angular/router": "^6.0.0",
         "@compodoc/compodoc": "^1.1.3",
         "@ng-bootstrap/ng-bootstrap": "^3.3.1",
+        "@types/bingmaps": "0.0.1",
         "angular-dual-listbox": "^4.7.0",
         "angular-font-awesome": "^3.1.2",
+        "angular-maps": "^6.0.1",
         "angular2-fontawesome": "^5.2.1",
+        "async": "^2.5.0",
+        "bingmaps": "^2.0.3",
         "bootstrap": "^4.1.1",
         "bootstrap-duallistbox": "^3.0.6",
         "core-js": "^2.4.1",
@@ -39,6 +43,7 @@
         "hammerjs": "^2.0.8",
         "intl": "^1.2.5",
         "jquery": "^3.2.1",
+        "json-loader": "^0.5.7",
         "ngx-bootstrap": "^3.0.1",
         "ngx-cookie-service": "^1.0.10",
         "ngx-modal-dialog": "^3.0.0",
